# dht22-monitor-rpi

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: monitor.py
